Add cod for sensor

--- a/Predkosciomierz_rowerowy/Predkosciomierz_rowerowy.ioc
+++ b/Predkosciomierz_rowerowy/Predkosciomierz_rowerowy.ioc
@@ -7,15 +7,17 @@ Mcu.IP1=RCC
 Mcu.IP2=SPI1
 Mcu.IP3=SYS
 Mcu.IP4=TIM3
-Mcu.IP5=USART2
-Mcu.IPNb=6
+Mcu.IP5=TIM6
+Mcu.IP6=TIM8
+Mcu.IP7=USART2
+Mcu.IPNb=8
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PB10
 Mcu.Pin11=PC7
-Mcu.Pin12=PC8
+Mcu.Pin12=PC9
 Mcu.Pin13=PA8
 Mcu.Pin14=PA9
 Mcu.Pin15=PA13
@@ -26,6 +28,7 @@ Mcu.Pin19=PB5
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin20=PB6
 Mcu.Pin21=VP_SYS_VS_Systick
+Mcu.Pin22=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin5=PA2
@@ -33,7 +36,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PA7
-Mcu.PinsNb=22
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -49,6 +52,8 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM8_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PA13.GPIOParameters=GPIO_Label
@@ -117,8 +122,7 @@ PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PC7.Signal=S_TIM3_CH2
-PC8.Locked=true
-PC8.Signal=S_TIM3_CH3
+PC9.Signal=S_TIM8_CH4
 PH0-OSC_IN.Locked=true
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
@@ -153,7 +157,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5.27
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_TIM8_Init-TIM8-false-HAL-true,7-MX_TIM6_Init-TIM6-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -207,25 +211,32 @@ SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
 SH.S_TIM3_CH2.ConfNb=1
-SH.S_TIM3_CH3.0=TIM3_CH3,Input_Capture3_from_TI3
-SH.S_TIM3_CH3.ConfNb=1
+SH.S_TIM8_CH4.0=TIM8_CH4,Input_Capture4_from_TI4
+SH.S_TIM8_CH4.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 SPI1.CalculateBaudRate=18.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-TIM3.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM3.ICFilter_CH3=0x0F
-TIM3.ICPolarity_CH3=TIM_INPUTCHANNELPOLARITY_FALLING
-TIM3.ICPrescaler-Input_Capture3_from_TI3=TIM_ICPSC_DIV1
-TIM3.IPParameters=Channel-PWM Generation2 CH2,Prescaler,Period,Channel-Input_Capture3_from_TI3,ICPolarity_CH3,ICPrescaler-Input_Capture3_from_TI3,ICFilter_CH3
+TIM3.IPParameters=Channel-PWM Generation2 CH2,Prescaler,Period
 TIM3.Period=1000-1
 TIM3.Prescaler=720-1
+TIM6.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM6.IPParameters=Prescaler,Period,AutoReloadPreload
+TIM6.Period=5000-1
+TIM6.Prescaler=14400-1
+TIM8.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM8.Channel-Input_Capture4_from_TI4=TIM_CHANNEL_4
+TIM8.IPParameters=Channel-Input_Capture4_from_TI4,Prescaler,AutoReloadPreload,Period
+TIM8.Period=65000-1
+TIM8.Prescaler=14400-1
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 board=NUCLEO-F446RE
 boardIOC=true
